[package]
name = "pong"
version = "0.1.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
arduboy = { git = "https://github.com/Seeker14491/arduboy-rs.git" }
